--- a/css/main.css
+++ b/css/main.css
@@ -361,25 +361,85 @@ a {
   background: linear-gradient(to bottom, #f8e296 0%, #f8e296 22%, white 22%, white 100%);
 }
 
+.slide-3,
+.slide-1,
+.slide-2 {
+  display: none;
+}
+
+.slider-wrapper {
+  position: relative;
+}
+
+.slider-controls {
+  display: flex;
+  position: absolute;
+  width: 78px;
+  height: 12px;
+  justify-content: space-between;
+  right: 80px;
+  top: 325px;
+}
+
+.slider-controls input+label {
+  cursor: pointer;
+  position: relative;
+  display: flex;
+  width: 12px;
+  height: 12px;
+  justify-content: center;
+  align-items: center;
+  user-select: none;
+}
+
+.slider-controls input+label::before {
+  z-index: 10;
+  position: absolute;
+  content: "";
+  width: 12px;
+  height: 12px;
+  background: url("../img/svg-device/slider-button-empty.svg") no-repeat 0 0;
+  background-size: cover;
+}
+
+.slider-controls input:checked+label::before {
+  background: url("../img/svg-device/slider-button.svg") no-repeat 0 0;
+  background-size: cover;
+}
+
 .stroke {
   width: 100px;
   height: 7px;
   background-color: white;
   margin-bottom: 40px;
+  position: relative;
 }
 
-.stroke::after {
-  content: "01";
+.stroke p {
+  margin: 0;
+  padding: 0;
   display: inline-block;
   position: absolute;
-  top: 60px;
-  right: -40px;
+  top: 30px;
+  right: -410px;
   color: white;
   font-family: "Gilroy";
   font-size: 179px;
   font-weight: bold;
   letter-spacing: 0.36px;
+  z-index: 5;
 }
+
+@keyframes slider {
+  0% {transform: scale(0.3);}
+  100% {transform: scale(1);}
+}
+
+.slide-show {
+  animation: slider 0.3s ease;
+  display: flex;
+}
+
 
 .slider-slogan {
   color: #000000;
@@ -401,6 +461,11 @@ a {
   justify-content: flex-start;
   position: relative;
   padding-top: 30px;
+}
+
+.slider-description>b {
+  position: relative;
+  z-index: 6;
 }
 
 .slider-description ul {
@@ -466,13 +531,16 @@ a {
 
 .slider-description .props-list {
   display: flex;
-  justify-content: space-between;
   margin-top: 40px;
 }
 
 .props-list p {
   margin: 0;
   padding: 0;
+}
+
+.props-item:not(:first-child) {
+  margin-left: 60px;
 }
 
 .popular {
